tests/models/struct/unnamed/i16/fail/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2.0)]
    i16
);
fn main() {}
